@@ -1,3 +1,8 @@
+2014-05-09  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
+
+	* image/bmpimage.c: Error exit instead of crashing for unsupported
+	OS2 bmp inclusion in bmp_include_image().
+
 2014-04-28  TANAKA Takuji  <KXD02663@nifty.ne.jp>
 
 	* XeTeX_ext.c: Accept Ctrl+Z as EOF in console (keyboard).
